# wave_map

./: .gitignore  README.org  emulator_parameters.toml  flake.nix  parameters.toml  pyproject.toml  run_emulator.py  run_gui.py  run_local_batch.sh  run_simulation.py  submit-job.slurm  train_ppe.py
docs/symbolic-calculations/: upwind-flux.py
src/emulator/: data_extractor.py  emulation_setup.py  input_parser.py  logger.py  parameter_file_generator.py  parameter_space_sampler.py
src/gui/: user_interface.py
src/wave_simulator/: finite_elements.py  geometry_generator.py  input_parser.py  logger.py  mesh.py  physics.py  reference_element_operators.py  sensor_placer.py  simulation_setup.py  simulator.py  spatial_evaluator.py  time_steppers.py  visualizer.py
tests/: test_mesh.py  test_reference_element_operators.py
